# personal-health-ledger

./: .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
config/: README.md  config.yaml  service_account.json.example
src/personal_health_ledger/: __init__.py
src/personal_health_ledger/cli/: main.py
src/personal_health_ledger/domain/: __init__.py  weight.py
src/personal_health_ledger/infrastructure/: __init__.py
src/personal_health_ledger/infrastructure/drive_client/: __init__.py  client.py
src/personal_health_ledger/infrastructure/parsers/: __init__.py  csv_parser.py  fit_parser.py
src/personal_health_ledger/services/: comparison.py  consolidation.py  daily_consolidation.py  output.py
src/personal_health_ledger/utils/: exceptions.py  hashing.py  logging_config.py  parameters.py  timezone_utils.py
tests/: __init__.py  test_comparison.py  test_consolidation.py  test_csv_parser.py
